[gd_scene load_steps=10 format=2]

[ext_resource path="res://Interface/Scripts/DiceSelect.gd" type="Script" id=1]
[ext_resource path="res://Interface/Themes/dice_input_theme.tres" type="Theme" id=2]
[ext_resource path="res://Interface/Icons/clear.png" type="Texture" id=3]
[ext_resource path="res://Interface/Scripts/NumberInput.gd" type="Script" id=4]
[ext_resource path="res://Interface/Icons/add.png" type="Texture" id=5]
[ext_resource path="res://Interface/Icons/d20.png" type="Texture" id=6]
[ext_resource path="res://Interface/Scripts/IconButton.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 0.92549, 0.839216, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3

[sub_resource type="CanvasItemMaterial" id=2]

[node name="DiceSelect" type="HBoxContainer"]
margin_right = 182.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="IconAspect" type="AspectRatioContainer" parent="."]
margin_right = 40.0
margin_bottom = 42.0
mouse_filter = 2
size_flags_vertical = 3
stretch_mode = 1
alignment_horizontal = 0
alignment_vertical = 0

[node name="DiceIcon" type="PanelContainer" parent="IconAspect"]
margin_right = 42.0
margin_bottom = 42.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Dice type"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="Icon" type="TextureRect" parent="IconAspect/DiceIcon"]
self_modulate = Color( 0.12549, 0.235294, 0.337255, 1 )
material = SubResource( 2 )
margin_left = 6.0
margin_top = 6.0
margin_right = 36.0
margin_bottom = 36.0
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberInput" type="LineEdit" parent="."]
margin_left = 40.0
margin_right = 154.0
margin_bottom = 42.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "Number of dice to add"
size_flags_horizontal = 3
size_flags_vertical = 3
align = 2
max_length = 3
expand_to_text_length = true
placeholder_text = "1"
script = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 154.0
margin_right = 162.0
margin_bottom = 42.0
rect_min_size = Vector2( 8, 0 )
size_flags_vertical = 3

[node name="InteractionButtons" type="VBoxContainer" parent="."]
margin_left = 162.0
margin_right = 182.0
margin_bottom = 42.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
custom_constants/separation = 0

[node name="Top" type="MarginContainer" parent="InteractionButtons"]
margin_right = 20.0
margin_bottom = 3.0
rect_min_size = Vector2( 0, 3 )

[node name="DiceAdd" type="TextureButton" parent="InteractionButtons"]
self_modulate = Color( 1, 0.92549, 0.839216, 1 )
margin_top = 3.0
margin_right = 20.0
margin_bottom = 20.0
hint_tooltip = "Add the entered number of dice"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
icon_color_normal = Color( 1, 0.92549, 0.839216, 1 )
icon_color_disabled = Color( 0.552941, 0.411765, 0.478431, 1 )
icon_color_focus = Color( 1, 0.768627, 0.564706, 1 )
icon_color_hover = Color( 1, 0.768627, 0.564706, 1 )
icon_color_pressed = Color( 1, 0.92549, 0.839216, 1 )

[node name="Space" type="MarginContainer" parent="InteractionButtons"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 5 )

[node name="DiceClear" type="TextureButton" parent="InteractionButtons"]
self_modulate = Color( 1, 0.768627, 0.564706, 1 )
margin_top = 25.0
margin_right = 20.0
margin_bottom = 39.0
hint_tooltip = "Clear all dice of this type"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
icon_color_normal = Color( 1, 0.768627, 0.564706, 1 )
icon_color_disabled = Color( 0.552941, 0.411765, 0.478431, 1 )
icon_color_focus = Color( 1, 0.92549, 0.839216, 1 )
icon_color_hover = Color( 1, 0.92549, 0.839216, 1 )
icon_color_pressed = Color( 1, 0.768627, 0.564706, 1 )

[node name="Bottom" type="MarginContainer" parent="InteractionButtons"]
margin_top = 39.0
margin_right = 20.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 3 )

[connection signal="mouse_entered" from="NumberInput" to="NumberInput" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="NumberInput" to="NumberInput" method="_on_mouse_exited"]
[connection signal="text_changed" from="NumberInput" to="NumberInput" method="_on_NumberInput_text_changed"]
[connection signal="text_entered" from="NumberInput" to="." method="_on_NumberInput_text_entered"]
[connection signal="pressed" from="InteractionButtons/DiceAdd" to="." method="_on_DiceAdd_pressed"]
[connection signal="pressed" from="InteractionButtons/DiceClear" to="." method="_on_DiceClear_pressed"]
